i start the project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="#FAQ" class="icon fa-question-circle"><span>FAQ</span></a>
+						<a href="https://www.instagram.com/monkeydjiji/?hl=fr" class="icon brands fa-instagram"><span>Instagram</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,66 +32,75 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>MonKeyDjiji</h1>
+									<p>Anime Painting</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/me3.jpg" alt="" />
 								</a>
 							</article>
+
+						<!-- FAQ -->
+
+						<article id="FAQ" class="panel">
+							<p> TEST </p>
+							<img src="images/me3.jpg" alt="" />
+
+						</article>
 
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Galerie</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Bonjour je suis <b>MonKeyDjiji</b> je suis une artiste peintre, spécialiste des peintures sur glasse. 
+									Vous pourrez retrouver ici de nombreuses de mes créations.
+									La page de contact est disponible vous pouvez l'utiliser pour me contacter ou pour des questions
 								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfjIs9bDXyF/?hl=fr" class="image fit"><img src="images/pc (1).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfhMNwIDemj/?hl=fr" class="image fit"><img src="images/pc (2).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/Cfh_alOj0m_/?hl=fr" class="image fit"><img src="images/pc (3).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfighfTDkDv/?hl=fr" class="image fit"><img src="images/pc (4).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfigncQDeqc/?hl=fr" class="image fit"><img src="images/pc (5).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfjIhnGDRl1/?hl=fr" class="image fit"><img src="images/pc (6).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CffVQbRDuwZ/?hl=fr" class="image fit"><img src="images/pic (1).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfWT4NSDH0x/?hl=fr" class="image fit"><img src="images/pic (2).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfX1iqbKAfq/?hl=fr#" class="image fit"><img src="images/pic (3).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfaSeusKFbC/?hl=fr" class="image fit"><img src="images/pic (4).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CfU6lj9Dboj/?hl=fr" class="image fit"><img src="images/pict (1).jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a href="https://www.instagram.com/p/CZZ-WxlAGdQ/?hl=fr" class="image fit"><img src="images/pict (2).jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
 							</article>
+							
 
 						<!-- Contact -->
 							<article id="contact" class="panel">
@@ -101,13 +111,13 @@
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
+												<input type="text" name="Name" placeholder="Name" />
 											</div>
 											<div class="col-6 col-12-medium">
 												<input type="text" name="email" placeholder="Email" />
 											</div>
 											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
+												<input type="text" name="Objet" placeholder="Commande / Question / ..." />
 											</div>
 											<div class="col-12">
 												<textarea name="message" placeholder="Message" rows="6"></textarea>
@@ -119,7 +129,6 @@
 									</div>
 								</form>
 							</article>
-
 					</div>
 
 				<!-- Footer -->
