--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="https://formspree.io/f/xzbolbdb" method="post">
+								<form action="https://formspree.io/f/xzbolbdb" method="post" enctype="multipart/form-data>
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
@@ -121,6 +121,9 @@
 											</div>
 											<div class="col-12">
 												<textarea name="message" placeholder="Message" rows="6"></textarea>
+											</div>
+											<div class="col-12">
+												<input type="file" name="upload">>
 											</div>
 											<div class="col-12">
 												<input type="submit" value="Send Message" />
